# minecraft-offline-launcher

./: .gitignore  README.md  cristalix_classes.txt  main.js  package-lock.json  package.json  preload.js  test-scope.ps1  test.ps1  update-release-text.js  update-text.bat  upload-release.js  upload-release.ps1  upload.bat
lib/: config-manager.js  fabric-manager.js  java-manager.js  launcher-core.js  theme-extractor.js  version-manager.js
src/: index.html
src-rust/: Cargo.toml  launcher-native.win32-x64-msvc.node
src-rust/src/: lib.rs
src/data/: countries.js
src/js/: ferrofluid.js  renderer.js
src/styles/: main.css
